fix z-index

--- a/src/components/BottomNav/bottom-nav.scss
+++ b/src/components/BottomNav/bottom-nav.scss
@@ -6,6 +6,7 @@
   bottom: 0;
   width: 100%;
   background-color: $white;
+  z-index: 900;
 
   @media only screen and (max-width: 768px) {
     display: flex !important;
